Revision history for Test::Apocalypse

{{$NEXT}}

	Add Test::Mojibake to the dist
	Add more exclusions to the standard Perl::Critic config
	Add PERL_CRITIC_STRICT env var to skip the bundled Perl::Critic config
	Fix an error in Test::Apocalypse::Script
	Use Test::CPAN::Changes instead of the outdated Test::CheckChanges

1.002	2011-04-21 21:49:46 UTC

	Add more default exclusions to the Perl::Critic default .perlcriticrc
	Tweaked the OutdatedPrereqs test *again* so it FAILs if a prereq version is higher than found on CPAN
	Tweaked the Dependencies test so it correctly processes found prereqs that has no version

1.001	2011-03-08 21:37:20 UTC

	Tweaked the OutdatedPrereqs test so it will correctly FAIL if a prereq wasn't found on CPAN
	Tweaked the Dependencies test so it correctly filters provided packages

1.000	2011-03-04 23:37:23 UTC

	Converted to Dist::Zilla for the release process!
	Tweaked the internals to cleanup automated issues
	Ported the META.(yml|json) tests to the new Test::CPAN::Meta infrastructure, thanks JAWNSY! ( RT#66215 )
	Changed some plugins so they execute tests as TODO, to not cause spurious FAILs
	Added Test::Vars to the testsuite
	Added Test::Script to the testsuite
	Added Test::Pod::LinkCheck to the testsuite
	Added Test::Pod::Spelling::CommonMistakes to the testsuite
	Added debugging of test info, thanks POE::Test::Loops!
	Replaced Test::Dependencies with homebrew solution utilizing Perl::PrereqScanner
	Removed Test::Module::Used plugin ( see above )
	Removed the Test::Prereq plugin because it never worked reliably and we already have a plugin for it ( see above )
	Removed the Test::UseAllModules plugin because we have other plugins that do the same thing
	Bumped Test::NoPlan prereq to 0.0.6 so it works properly under Test::Block
	Bumped Test::Pod prereq to 1.41 so it doesn't complain about L<text|scheme> being invalid
	Added Pod::Coverage::TrustPod as the coverage class for Test::Pod::Coverage