@@ -7,6 +7,7 @@ Revision history for Test::Apocalypse
 	Add PERL_CRITIC_STRICT env var to skip the bundled Perl::Critic config
 	Fix an error in Test::Apocalypse::Script
 	Use Test::CPAN::Changes instead of the outdated Test::CheckChanges
+	Ripped out the dysfunctional Test::NoWarnings in favor of Test::FailWarnings, thanks DAGOLDEN!
 
 1.002	2011-04-21 21:49:46 UTC
 
